# decklore

./: README.md
backend/: pyproject.toml
backend/app/: main.py
